--- a/style.css
+++ b/style.css
@@ -3,5 +3,85 @@
     color: white;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    width: 160px;
+    background-color: #F5C001;
+    text-align: center;
+    font-size: 18px;
+}
 
-  
+li a {
+    display:block;
+    color : #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #FFAC12;
+    color :white;
+}
+
+button {
+    background-color: #F5C001;
+    border: none;
+    font-size: 18px;
+}
+
+li a button:hover {
+    background-color: #FFAC12;
+    color :white;
+}
+
+
+/*課堂內容*/
+/*svg直接將我的nav bar擋在後面...*/
+/* svg{
+    border :1px solid #ccc
+    
+}
+
+.axis .domain{
+    stroke: none
+}
+
+.x line{
+    stroke: white
+}
+
+.tooltip{
+    position: fixed;
+    opacity: 0;
+    pointer-events: none;
+    background: #eee;
+    max-width: 200px;
+}
+
+.tip-header{
+    border-bottom: 2px solid white;
+    padding: 0.9rem 1rem;
+}
+
+.tip-body{
+    padding: 0.2rem;     
+}
+
+h3,h4{
+    font-size: 0.9rem;
+    color:#555;
+    margin:0;
+}
+
+h4{
+    font-weight: normal;
+}
+
+.tip-info{
+    margin:0;
+    padding: 0.3rem 1em;
+    font-size: 0.8em;
+} */
