--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@
     color: white;
 }
 
+h1 {
+    text-align: center;
+    background-color: #FFAC12;
+}
+body{
+	background-image: url("https://cdn.pixabay.com/photo/2017/07/10/18/47/background-2491008_960_720.png");
+	background-repeat: repeat;
+}
 ul {
     list-style-type: none;
     margin: 0;
@@ -17,7 +25,7 @@ ul {
 li a {
     display:block;
     color : #000;
-    padding: 8px 16px;
+    padding: 48px 32px;
     text-decoration: none;
 }
 
@@ -38,9 +46,17 @@ li a button:hover {
 }
 
 
-/*課堂內容*/
-/*svg直接將我的nav bar擋在後面...*/
-/* svg{
+/* 使用flex排版 */
+.bar-chart-container {
+    /* border : solid 5px #FFAC12; */
+    height : 950px;
+    margin:2%;
+    display:flex;
+    flex-wrap: wrap;
+    
+}
+
+svg{
     border :1px solid #ccc
     
 }
@@ -55,6 +71,7 @@ li a button:hover {
 
 .tooltip{
     position: fixed;
+    z-index: 10;            /*最上層*/
     opacity: 0;
     pointer-events: none;
     background: #eee;
@@ -84,4 +101,4 @@ h4{
     margin:0;
     padding: 0.3rem 1em;
     font-size: 0.8em;
-} */
+}
