--- a/style.css
+++ b/style.css
@@ -3,14 +3,16 @@
     color: rgb(255, 0, 0);
 }
 
-h1 {
+p {
     text-align: center;
-    background-color: #FFAC12;
+    /* background-color: #FFAC12; */
+    font-size: large;
 }
-body{
+/* body{
 	background-image: url("https://cdn.pixabay.com/photo/2017/07/10/18/47/background-2491008_960_720.png");
 	background-repeat: repeat;
-}
+} */
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -25,7 +27,7 @@ ul {
 li a {
     display:block;
     color : #000;
-    padding: 48px 32px;
+    padding: 49px 32px;
     text-decoration: none;
 }
 
@@ -47,7 +49,7 @@ li a button:hover {
 
 
 /* 使用flex排版 */
-.bar-chart-container {
+.setup {
     /* border : solid 5px #FFAC12; */
     height : 950px;
     margin:2%;
@@ -57,7 +59,7 @@ li a button:hover {
 }
 
 svg{
-    border :1px solid #ccc;
+    border :5px solid #F5C001;
 }
 
 .axis .domain{
