--- a/style.css
+++ b/style.css
@@ -156,11 +156,11 @@ h4{
   }
   
   input:checked + .slider {
-    background-color: #2196F3;
+    background-color: lightblue;
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px lightblue;
   }
   
   input:checked + .slider:before {
