--- a/style.css
+++ b/style.css
@@ -40,29 +40,6 @@ h2 {
     display:flex;
     flex-direction :column;
 }
-/* ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    width: 160px;
-    background-color: lightblue;
-    text-align: center;
-    font-size: 18px;
-} */
-
-/* li a {
-    display:block;
-    color : #000;
-    padding: 49px 32px;
-    text-decoration: none;
-} */
-
-/* li a:hover {
-    background-color: cadetblue;
-    color :white;
-    transition: 0.5s;
-} */
 
 button {
     background-color: #1ED760;
@@ -238,7 +215,7 @@ h4{
 }
   
 /* 在不同螢幕寬度下調整內容的大小或佈局 */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width: 481px){
     .setup {
         max-width: 90%; /* 縮小容器的寬度 */
     }
