--- a/style.css
+++ b/style.css
@@ -3,15 +3,6 @@
     color: #1ED760;
 }
 
-/* img {
-    height: 80px;
-    width: 80px;
-    border-radius: 15px;
-    position: relative;
-    top: 15px;
-    left:30px;
-} */
-
 body{
     font-family: 'Fjalla One', sans-serif;
 }
@@ -51,29 +42,6 @@ h2 {
     display: flex;
     flex-direction :column;
 }
-/* ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    width: 160px;
-    background-color: lightblue;
-    text-align: center;
-    font-size: 18px;
-} */
-
-/* li a {
-    display:block;
-    color : #000;
-    padding: 49px 32px;
-    text-decoration: none;
-} */
-
-/* li a:hover {
-    background-color: cadetblue;
-    color :white;
-    transition: 0.5s;
-} */
 
 button {
     background-color: #eff1ef00;
@@ -186,8 +154,6 @@ h4{
     display: inline-block;
     width: 60px;
     height: 34px;
-    top: 3px;
-    left: 200px;
   }
   
   /* Hide default HTML checkbox */
@@ -262,7 +228,7 @@ h4{
     margin-left: 10px;
 }
 
-/* 大小容納三部影片 */
+/* 大小容納三部影片 */   /*其實沒有border的話沒有人在乎放幾部影片*/
 #youtube-container{
     display: flex;
     justify-content: center; 
@@ -300,3 +266,38 @@ iframe.youtube-iframe{
     object-fit: cover; /* 使用 object-fit: cover 以保持縮圖比例並填滿容器 */
     transform: translateX(-90%); /*將圖片往左移動50%的寬度*/
   }
+
+  /* 在不同螢幕寬度下調整內容的佈局 */
+
+@media screen and (min-width: 1500px){
+    .screensize {
+        max-width: 100%; /* 縮小容器的寬度 */
+    }
+}
+@media screen and (min-width: 992px) and (max-width: 1199.99px){
+    .screensize {
+        max-width: 90%; /* 縮小容器的寬度 */
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 991.99px){
+    .screensize {
+        max-width: 80%; /* 縮小容器的寬度 */
+    }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767.99px){
+    .screensize {
+        max-width: 70%; /* 縮小容器的寬度 */
+    }
+}
+/* 在更小的螢幕寬度下進一步調整內容的佈局 */
+@media screen and (max-width: 479.99px) {
+    .screensize {
+        padding: 10px; /* 縮小內距 */
+    }
+}
+.screensize{
+    position: relative;
+    top: 30%;  
+    left: 2%;
+}
