--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body{
     font-family: 'Fjalla One', sans-serif;
-    padding-bottom: 8%;
+    padding-bottom: 3%;
 }
 
 h1 {
@@ -232,15 +232,16 @@ h4{
     display: flex;
     justify-content: center;
     position: relative;
-    top: 4%;
+    top: 3%;
     /* border: 3px solid #1ED760; */
     border-radius: 5px;
     background: #efefefef;
     /* height: 955px; */
-    height: 400px;
+    height: 430px;
     width: 700px;
 }
     h4{
+        font-size: 19px;
         position: absolute;
         top: 6%;
     }
@@ -255,7 +256,7 @@ iframe.youtube-iframe{
     display: flex;
     justify-content: center; 
     position: absolute;
-    top: 15%;
+    top: 17%;
     max-height: 100%;
     max-width: 100%;
 }
