--- a/style.css
+++ b/style.css
@@ -3,23 +3,35 @@
     color: #1ED760;
 }
 
+#title-banner{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+img {
+    height: 60px;
+    width: 60px;
+    padding: 5px;
+    position: relative;
+    display: flex;
+}
+
 body{
     font-family: 'Fjalla One', sans-serif;
     padding-bottom: 3%;
 }
 
 h1 {
-    /* background-color: #1ED760; */
     color:  #1ED760; 
     font-family: 'Fjalla One', sans-serif;
     font-size: 60px;
-    display: inline;
     border-radius: 15px;
     position: relative;
     top: 5%;
     display: flex;
-    justify-content: center;
-    margin: 3% 0% 2%;
+    margin: 2% 0% 2%;
 }
 
 h2 {
