--- a/style.css
+++ b/style.css
@@ -125,7 +125,6 @@ svg{
 /*interactive 詳細資訊視窗設定*/
 .tooltip{
     position: fixed;
-    /* z-index: 10;            最上層 */
     opacity: 0;
     pointer-events: none;
     background: #eee;
@@ -167,15 +166,15 @@ h4{
     height: 34px;
   }
   
-  /* Hide default HTML checkbox */
-  .switch input {
+/* Hide default HTML checkbox */
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
-  }
+}
   
-  /* The slider */
-  .slider {
+/* The slider */
+.slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -185,9 +184,9 @@ h4{
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
-  }
+}
   
-  .slider:before {
+.slider:before {
     position: absolute;
     content: "";
     height: 26px;
@@ -197,30 +196,30 @@ h4{
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
-  }
+}
   
-  input:checked + .slider {
+input:checked + .slider {
     background-color: #1ED760;
-  }
+}
   
-  input:focus + .slider {
+input:focus + .slider {
     box-shadow: 0 0 1px #1ED760;
-  }
+}
   
-  input:checked + .slider:before {
+input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
-  }
+}
   
-  /* Rounded sliders */
-  .slider.round {
+/* Rounded sliders */
+.slider.round {
     border-radius: 34px;
-  }
+}
   
-  .slider.round:before {
+.slider.round:before {
     border-radius: 50%;
-  }
+}
 
 /*偶數元素設定不同背景樣式*/
 .tip-info:nth-of-type(even){
@@ -239,7 +238,7 @@ h4{
     margin-left: 10px;
 }
 
-/* 大小容納三部影片 */   /*其實沒有border的話沒有人在乎放幾部影片*/
+/* 容納影片 */   
 #youtube-container{
     display: flex;
     justify-content: center;
@@ -252,11 +251,12 @@ h4{
     height: 430px;
     width: 700px;
 }
-    h4{
-        font-size: 19px;
-        position: absolute;
-        top: 6%;
-    }
+
+h4{
+    font-size: 19px;
+    position: absolute;
+    top: 6%;
+}
 
 #videoLink{
     position: relative;
